# rust-ai-generate-template

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  cargo-generate.toml  env.template  install.sh
.githooks/: pre-commit  pre-push
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs
crates/cli/tests/: smoke.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: common.rs  lib.rs  registry.rs  scaffold.rs
crates/domains/hello/: Cargo.toml  build.rs  domain.ncl
crates/domains/hello/src/: main.rs
crates/domains/ping/: Cargo.toml  domain.ncl
crates/domains/ping/src/: main.rs
ncl/: contract.ncl  domains.ncl  presets.ncl
scripts/: new-domain.sh  pre-commit-no-hardcode.sh  rename-template.sh
