[package]
name = "rustai"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rustai"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
rustai-core = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
hardcoded-lint = { git = "https://github.com/dalsoop/hardcoded-lint" }
