[package]
name = "rustai-hello"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rustai-hello"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
rustai-core = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
hardcoded-lint = { git = "https://github.com/dalsoop/hardcoded-lint", rev = "c943f1f" }
